--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_marginEnd="223dp"
         android:layout_marginRight="223dp"
         android:layout_marginBottom="79dp"
-        android:text="안녕"
+        android:text="하이"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
