refact(#6) : 기존변수 - 코드컨벤션규칙 적용 xml 이름 변경

--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -15,7 +15,7 @@
             android:layout_height="78dp"
             android:background="#542d6a"/>
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/image_id"
+            android:id="@+id/imageId"
             android:src="@drawable/ic_launcher_background"
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -27,19 +27,19 @@
             android:layout_marginLeft="80dp"
             >
             <TextView
-                android:id="@+id/date_id"
+                android:id="@+id/dateId"
                 android:gravity="right"
                 android:layout_marginTop="9dp"
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
             <TextView
-                android:id="@+id/title_id"
+                android:id="@+id/titleId"
                 android:gravity="right"
                 android:layout_marginTop="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="17dp"/>
             <TextView
-                android:id="@+id/contents_id"
+                android:id="@+id/contentsId"
                 android:gravity="right"
                 android:layout_marginTop="53dp"
                 android:layout_width="match_parent"
