--- a/app/src/main/res/layout/activity_calendarpage.xml
+++ b/app/src/main/res/layout/activity_calendarpage.xml
@@ -13,7 +13,7 @@
         tools:ignore="MissingConstraints">
 
         <ImageView
-            android:id="@+id/menu_id"
+            android:id="@+id/menuId"
             android:layout_width="25dp"
             android:layout_height="20dp"
             android:layout_marginLeft="20dp"
@@ -21,11 +21,12 @@
             android:src="@drawable/menu"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints"></ImageView>
+            tools:ignore="MissingConstraints"/>
+
     </LinearLayout>
 
     <CalendarView
-        android:id="@+id/calendar_id"
+        android:id="@+id/calendarId"
         android:layout_width="310dp"
         android:layout_height="297dp"
         android:layout_marginLeft="50dp"
@@ -39,7 +40,7 @@
     </CalendarView>
 
     <TextView
-        android:id="@+id/text_day"
+        android:id="@+id/dayId"
         android:layout_width="62dp"
         android:layout_height="27dp"
         android:layout_marginLeft="50dp"
@@ -50,19 +51,19 @@
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendar_id"
+        app:layout_constraintTop_toBottomOf="@+id/calendarId"
         tools:ignore="MissingConstraints">
 
     </TextView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_id"
+        android:id="@+id/recyclerId"
         android:layout_width="310dp"
         android:layout_height="200dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_day"
+        app:layout_constraintTop_toBottomOf="@+id/dayId"
         tools:ignore="MissingConstraints"
 
         >
