--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/calendarIntentBtn"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="250dp"
