--- a/app/src/main/res/layout/activity_myinformation_insertprofile.xml
+++ b/app/src/main/res/layout/activity_myinformation_insertprofile.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/informationTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
