refact(#4): 랜딩페이지 플리퀘스트 수정

--- a/app/src/main/res/layout/activity_landingpage_start.xml
+++ b/app/src/main/res/layout/activity_landingpage_start.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/linear_gradient"
     >
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="78dp"
         android:layout_marginLeft="78dp"
-        android:layout_marginTop="175dp"
+        android:layout_marginTop="204dp"
         android:layout_marginEnd="78dp"
         android:layout_marginRight="78dp"
         android:layout_marginBottom="338dp"
         android:gravity="center_horizontal"
         android:letterSpacing="-0.03"
         android:lineSpacingExtra="4sp"
+        android:text="슬기로운\n공부생활"
         android:textColor="#ffffff"
         android:textSize="52sp"
-        android:text="슬기로운
-               공부생활" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
