--- a/app/src/main/res/layout/activity_myinformation_modifyprofile.xml
+++ b/app/src/main/res/layout/activity_myinformation_modifyprofile.xml
@@ -5,18 +5,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:id="@+id/nameRectangle2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/rectangle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/profileTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="추가정보를 입력해주세요"
+        android:layout_marginTop="16dp"
+        android:text="프로필"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/modifyBtn"
+        android:layout_width="81dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:background="#00FF0000"
+        android:text="수정"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
@@ -28,13 +53,68 @@
         app:layout_constraintTop_toBottomOf="@+id/profileTitle"
         app:layout_constraintVertical_bias="1.0">
 
+        <Button
+            android:id="@+id/inteBtn1"
+            android:layout_width="44dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/grey_circle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/interText" />
+
+        <Button
+            android:id="@+id/inteBtn3"
+            android:layout_width="44dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/grey_circle"
+            app:layout_constraintStart_toEndOf="@+id/inteBtn2"
+            app:layout_constraintTop_toBottomOf="@+id/interText" />
+
+        <Button
+            android:id="@+id/inteBtn2"
+            android:layout_width="44dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/grey_circle"
+            app:layout_constraintStart_toEndOf="@+id/inteBtn1"
+            app:layout_constraintTop_toBottomOf="@+id/interText" />
+
+        <Button
+            android:id="@+id/groupBtn2"
+            android:layout_width="44dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/grey_circle"
+            app:layout_constraintStart_toEndOf="@+id/groupBtn1"
+            app:layout_constraintTop_toBottomOf="@+id/groupText" />
+
+        <Button
+            android:id="@+id/groupBtn1"
+            android:layout_width="44dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/grey_circle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/groupText" />
+
         <EditText
             android:id="@+id/phoneView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="5dp"
             android:hint="전화번호"
             android:textSize="10sp"
             app:layout_constraintStart_toEndOf="@+id/phoneRectangle"
@@ -46,42 +126,10 @@
             android:layout_height="20dp"
             android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="23dp"
             android:background="@drawable/rectangle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameRectangle" />
-
-        <View
-            android:id="@+id/line2"
-            android:layout_width="0dp"
-            android:layout_height="3dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginRight="30dp"
-            android:background="#11000000"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneView" />
-
-        <View
-            android:id="@+id/line"
-            android:layout_width="0dp"
-            android:layout_height="3dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginRight="30dp"
-            android:background="#11000000"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameView" />
 
         <View
             android:id="@+id/line4"
@@ -89,7 +137,23 @@
             android:layout_height="3dp"
             android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="30dp"
+            android:background="#11000000"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/inteBtn3" />
+
+        <View
+            android:id="@+id/line"
+            android:layout_width="0dp"
+            android:layout_height="3dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="30dp"
             android:layout_marginRight="30dp"
             android:background="#11000000"
@@ -99,10 +163,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/depaView2" />
 
+        <View
+            android:id="@+id/line2"
+            android:layout_width="0dp"
+            android:layout_height="3dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="30dp"
+            android:background="#11000000"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/groupBtn3" />
+
         <ImageButton
             android:id="@+id/profilePicture"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/circle"
             app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +206,7 @@
             android:layout_height="20dp"
             android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/rectangle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profileImage" />
@@ -137,7 +217,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:hint="이름"
             android:textSize="10sp"
             app:layout_constraintStart_toEndOf="@+id/nameRectangle"
@@ -149,7 +229,7 @@
             android:layout_height="20dp"
             android:layout_marginStart="30dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="23dp"
             android:background="@drawable/rectangle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/phoneRectangle" />
@@ -160,7 +240,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="5dp"
             android:hint="분야"
             android:textSize="10sp"
             app:layout_constraintStart_toEndOf="@+id/departRectangle"
@@ -168,16 +248,61 @@
 
         <Button
             android:id="@+id/recoBtn"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/ellipse"
-            android:text="시작하기!"
+            android:text="스터디 추천"
             android:textColor="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/line4" />
 
+        <TextView
+            android:id="@+id/groupText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:text="속한 스터디 그룹"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/line" />
+
+        <Button
+            android:id="@+id/groupBtn3"
+            android:layout_width="44dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/grey_circle"
+            app:layout_constraintStart_toEndOf="@+id/groupBtn2"
+            app:layout_constraintTop_toBottomOf="@+id/groupText" />
+
+        <TextView
+            android:id="@+id/interText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:text="관심있는 분야"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/line2" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/mainBtn"
+        android:layout_width="81dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="23dp"
+        android:background="#00ff0000"
+        android:text="메인화면"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/nameRectangle2"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
