refact(#6) : constraintsLayout 배치 수정 recyclerView 폴더 생성 및 이동

--- a/app/src/main/res/layout/activity_calendarpage.xml
+++ b/app/src/main/res/layout/activity_calendarpage.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:background="@drawable/calendar_gradient"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/menuId"
@@ -21,7 +23,7 @@
             android:src="@drawable/menu"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints"/>
+             />
 
     </LinearLayout>
 
@@ -31,11 +33,12 @@
         android:layout_height="297dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="60dp"
+        android:layout_marginRight="50dp"
         android:background="@drawable/calendar_round"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
 
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toTopOf="parent">
 
     </CalendarView>
 
@@ -43,16 +46,16 @@
         android:id="@+id/dayId"
         android:layout_width="62dp"
         android:layout_height="27dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
         android:lineSpacingExtra="7sp"
         android:text="D-DAY"
         android:textColor="#191919"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendarId"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintEnd_toEndOf="@+id/calendarId"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/calendarId"
+        app:layout_constraintTop_toBottomOf="@+id/calendarId">
 
     </TextView>
 
@@ -60,12 +63,13 @@
         android:id="@+id/recyclerId"
         android:layout_width="310dp"
         android:layout_height="200dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/dayId"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dayId"
-        tools:ignore="MissingConstraints"
 
+        app:layout_constraintStart_toStartOf="@+id/dayId"
+        app:layout_constraintTop_toBottomOf="@+id/dayId"
         >
 
     </androidx.recyclerview.widget.RecyclerView>
