--- a/app/src/main/res/layout/activity_myinformation_insertprofile.xml
+++ b/app/src/main/res/layout/activity_myinformation_insertprofile.xml
@@ -97,7 +97,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/depaView2" />
+            app:layout_constraintTop_toBottomOf="@+id/departmentView2" />
 
         <ImageButton
             android:id="@+id/profilePicture"
@@ -144,7 +144,7 @@
             app:layout_constraintTop_toBottomOf="@+id/profileImage" />
 
         <View
-            android:id="@+id/departRectangle"
+            android:id="@+id/departmentRectangle"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginStart="30dp"
@@ -155,7 +155,7 @@
             app:layout_constraintTop_toBottomOf="@+id/phoneRectangle" />
 
         <EditText
-            android:id="@+id/depaView2"
+            android:id="@+id/departmentView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -163,11 +163,11 @@
             android:layout_marginTop="28dp"
             android:hint="분야"
             android:textSize="10sp"
-            app:layout_constraintStart_toEndOf="@+id/departRectangle"
+            app:layout_constraintStart_toEndOf="@+id/departmentRectangle"
             app:layout_constraintTop_toBottomOf="@+id/phoneView" />
 
         <Button
-            android:id="@+id/recoBtn"
+            android:id="@+id/startBtn"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
