--- a/app/src/main/res/layout/activity_myinformation_modifyprofile.xml
+++ b/app/src/main/res/layout/activity_myinformation_modifyprofile.xml
@@ -54,7 +54,7 @@
         app:layout_constraintVertical_bias="1.0">
 
         <Button
-            android:id="@+id/inteBtn1"
+            android:id="@+id/interestBtn1"
             android:layout_width="44dp"
             android:layout_height="36dp"
             android:layout_marginStart="30dp"
@@ -65,25 +65,25 @@
             app:layout_constraintTop_toBottomOf="@+id/interText" />
 
         <Button
-            android:id="@+id/inteBtn3"
+            android:id="@+id/interestBtn3"
             android:layout_width="44dp"
             android:layout_height="36dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/grey_circle"
-            app:layout_constraintStart_toEndOf="@+id/inteBtn2"
+            app:layout_constraintStart_toEndOf="@+id/interestBtn2"
             app:layout_constraintTop_toBottomOf="@+id/interText" />
 
         <Button
-            android:id="@+id/inteBtn2"
+            android:id="@+id/interestBtn2"
             android:layout_width="44dp"
             android:layout_height="36dp"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/grey_circle"
-            app:layout_constraintStart_toEndOf="@+id/inteBtn1"
+            app:layout_constraintStart_toEndOf="@+id/interestBtn1"
             app:layout_constraintTop_toBottomOf="@+id/interText" />
 
         <Button
@@ -145,7 +145,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/inteBtn3" />
+            app:layout_constraintTop_toBottomOf="@+id/interestBtn3" />
 
         <View
             android:id="@+id/line"
@@ -161,7 +161,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/depaView2" />
+            app:layout_constraintTop_toBottomOf="@+id/departmentView2" />
 
         <View
             android:id="@+id/line2"
@@ -224,7 +224,7 @@
             app:layout_constraintTop_toBottomOf="@+id/profileImage" />
 
         <View
-            android:id="@+id/departRectangle"
+            android:id="@+id/departmentRectangle"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginStart="30dp"
@@ -235,7 +235,7 @@
             app:layout_constraintTop_toBottomOf="@+id/phoneRectangle" />
 
         <EditText
-            android:id="@+id/depaView2"
+            android:id="@+id/departmentView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -243,11 +243,11 @@
             android:layout_marginTop="5dp"
             android:hint="분야"
             android:textSize="10sp"
-            app:layout_constraintStart_toEndOf="@+id/departRectangle"
+            app:layout_constraintStart_toEndOf="@+id/departmentRectangle"
             app:layout_constraintTop_toBottomOf="@+id/phoneView" />
 
         <Button
-            android:id="@+id/recoBtn"
+            android:id="@+id/startBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
