--- a/app/src/main/res/layout/activity_myinformation_modifyprofile.xml
+++ b/app/src/main/res/layout/activity_myinformation_modifyprofile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <View
-        android:id="@+id/nameRectangle2"
+        android:id="@+id/mainRectangle"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="15dp"
@@ -53,61 +53,6 @@
         app:layout_constraintTop_toBottomOf="@+id/profileTitle"
         app:layout_constraintVertical_bias="1.0">
 
-        <Button
-            android:id="@+id/interestBtn1"
-            android:layout_width="44dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/grey_circle"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/interText" />
-
-        <Button
-            android:id="@+id/interestBtn3"
-            android:layout_width="44dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/grey_circle"
-            app:layout_constraintStart_toEndOf="@+id/interestBtn2"
-            app:layout_constraintTop_toBottomOf="@+id/interText" />
-
-        <Button
-            android:id="@+id/interestBtn2"
-            android:layout_width="44dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/grey_circle"
-            app:layout_constraintStart_toEndOf="@+id/interestBtn1"
-            app:layout_constraintTop_toBottomOf="@+id/interText" />
-
-        <Button
-            android:id="@+id/groupBtn2"
-            android:layout_width="44dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/grey_circle"
-            app:layout_constraintStart_toEndOf="@+id/groupBtn1"
-            app:layout_constraintTop_toBottomOf="@+id/groupText" />
-
-        <Button
-            android:id="@+id/groupBtn1"
-            android:layout_width="44dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/grey_circle"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/groupText" />
-
         <EditText
             android:id="@+id/phoneView"
             android:layout_width="wrap_content"
@@ -132,7 +77,7 @@
             app:layout_constraintTop_toBottomOf="@+id/nameRectangle" />
 
         <View
-            android:id="@+id/line4"
+            android:id="@+id/departmentLine"
             android:layout_width="0dp"
             android:layout_height="3dp"
             android:layout_marginStart="30dp"
@@ -145,10 +90,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/interestBtn3" />
+            app:layout_constraintTop_toBottomOf="@+id/departmentLayout" />
 
         <View
-            android:id="@+id/line"
+            android:id="@+id/nameLine"
             android:layout_width="0dp"
             android:layout_height="3dp"
             android:layout_marginStart="30dp"
@@ -161,10 +106,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/departmentView2" />
+            app:layout_constraintTop_toBottomOf="@+id/departmentView" />
 
         <View
-            android:id="@+id/line2"
+            android:id="@+id/phoneLine"
             android:layout_width="0dp"
             android:layout_height="3dp"
             android:layout_marginStart="30dp"
@@ -177,7 +122,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/groupBtn3" />
+            app:layout_constraintTop_toBottomOf="@+id/groupLayout" />
 
         <ImageButton
             android:id="@+id/profilePicture"
@@ -235,7 +180,7 @@
             app:layout_constraintTop_toBottomOf="@+id/phoneRectangle" />
 
         <EditText
-            android:id="@+id/departmentView2"
+            android:id="@+id/departmentView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -257,7 +202,7 @@
             android:text="스터디 추천"
             android:textColor="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/line4" />
+            app:layout_constraintTop_toBottomOf="@+id/departmentLine" />
 
         <TextView
             android:id="@+id/groupText"
@@ -268,18 +213,7 @@
             android:layout_marginTop="10dp"
             android:text="속한 스터디 그룹"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/line" />
-
-        <Button
-            android:id="@+id/groupBtn3"
-            android:layout_width="44dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/grey_circle"
-            app:layout_constraintStart_toEndOf="@+id/groupBtn2"
-            app:layout_constraintTop_toBottomOf="@+id/groupText" />
+            app:layout_constraintTop_toBottomOf="@+id/nameLine" />
 
         <TextView
             android:id="@+id/interText"
@@ -290,7 +224,29 @@
             android:layout_marginTop="10dp"
             android:text="관심있는 분야"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/line2" />
+            app:layout_constraintTop_toBottomOf="@+id/phoneLine" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/departmentLayout"
+            android:layout_width="335dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/interText">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/groupLayout"
+            android:layout_width="335dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/groupText">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -302,7 +258,7 @@
         android:background="#00ff0000"
         android:text="메인화면"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/nameRectangle2"
+        app:layout_constraintStart_toEndOf="@+id/mainRectangle"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
