--- a/app/src/main/res/layout/activity_calendarpage.xml
+++ b/app/src/main/res/layout/activity_calendarpage.xml
@@ -1,76 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainPageId"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f2f2">
+    android:fitsSystemWindows="true"
+    android:background="#f2f2f2"
+    tools:openDrawer="start"
+    >
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@drawable/calendar_gradient"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/menuId"
-            android:layout_width="25dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/menu"
-            app:layout_constraintLeft_toLeftOf="parent"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolBarId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/calendar_gradient"
+            android:minHeight="?attr/actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
              />
 
-    </LinearLayout>
 
-    <CalendarView
-        android:id="@+id/calendarId"
-        android:layout_width="310dp"
-        android:layout_height="297dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginRight="50dp"
-        android:background="@drawable/calendar_round"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
 
-        app:layout_constraintTop_toTopOf="parent">
+        <CalendarView
+            android:id="@+id/calendarId"
+            android:layout_width="310dp"
+            android:layout_height="297dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginRight="50dp"
+            android:background="@drawable/calendar_round"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
 
-    </CalendarView>
+            app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/dayId"
-        android:layout_width="62dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="12dp"
-        android:lineSpacingExtra="7sp"
-        android:text="D-DAY"
-        android:textColor="#191919"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/calendarId"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/calendarId"
-        app:layout_constraintTop_toBottomOf="@+id/calendarId">
+        </CalendarView>
 
-    </TextView>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerId"
-        android:layout_width="310dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/dayId"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
+        <TextView
+            android:id="@+id/dayId"
+            android:layout_width="62dp"
+            android:layout_height="27dp"
+            android:layout_marginTop="12dp"
+            android:lineSpacingExtra="7sp"
+            android:text="D-DAY"
+            android:textColor="#191919"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/calendarId"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/calendarId"
+            app:layout_constraintTop_toBottomOf="@+id/calendarId">
 
-        app:layout_constraintStart_toStartOf="@+id/dayId"
-        app:layout_constraintTop_toBottomOf="@+id/dayId"
+        </TextView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerId"
+            android:layout_width="315dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="@+id/dayId"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+
+            app:layout_constraintStart_toStartOf="@+id/dayId"
+            app:layout_constraintTop_toBottomOf="@+id/dayId">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationviewId"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/activity_calendarpage_navigationdrawer"
+
         >
 
-    </androidx.recyclerview.widget.RecyclerView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ExpandableListView
+            android:id="@+id/joinedGroupListId"
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginLeft="20dp"
+            android:groupIndicator="@drawable/expandablelistview_groupselector"
+            />
+
+    </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
