refact : 패키지 정리

--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -86,7 +86,7 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/activity_calendarpage_navigationdrawer"
 
-        >
+        tools:ignore="MissingClass">
 
         <ExpandableListView
             android:id="@+id/joinedGroupListId"
