feat(#20) : 기존 메인페이지 주석 제거 삭제된 파일 복구 삭제된 라이브러리 복구

--- a/app/src/main/res/layout/activity_calendarpage_navigationdrawer.xml
+++ b/app/src/main/res/layout/activity_calendarpage_navigationdrawer.xml
@@ -7,12 +7,12 @@
     android:layout_height="match_parent"
     >
 
-<!--    <LinearLayout
+    <LinearLayout
         android:id="@+id/navigationviewHeaderId"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/calendar_gradient"
+        android:background="@drawable/calendar_toolbar_gradient"
         android:gravity="right"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +39,6 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/navigationviewHeaderId" />-->
+            app:layout_constraintTop_toBottomOf="@id/navigationviewHeaderId" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
