refact(#20) : 소스 최신화#2

--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -17,7 +17,7 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolBarId"
+            android:id="@+id/plannerToolBarId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/calendar_toolbar_gradient"
@@ -65,7 +65,7 @@
         </TextView>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerId"
+            android:id="@+id/plannerRecyclerId"
             android:layout_width="315dp"
             android:layout_height="250dp"
             android:layout_marginTop="10dp"
