--- a/app/src/main/res/layout/activity_group_signup_management.xml
+++ b/app/src/main/res/layout/activity_group_signup_management.xml
@@ -24,7 +24,7 @@
             android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="신청 현황"
+            android:text="@string/group_signup_title"
             android:layout_gravity="center"
             android:textColor="@color/black"
             android:textSize="20sp"
