--- a/app/src/main/res/layout/activity_management_modified.xml
+++ b/app/src/main/res/layout/activity_management_modified.xml
@@ -24,7 +24,7 @@
             android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="운영진 관리"
+            android:text="@string/management_modified_title"
             android:layout_gravity="center"
             android:textColor="@color/black"
             android:textSize="20sp"
