--- a/app/src/main/res/layout/activity_user_create.xml
+++ b/app/src/main/res/layout/activity_user_create.xml
@@ -35,7 +35,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="30dp"
-            android:hint="전화번호"
+            android:hint="@string/activity_user_phone"
             android:textSize="10sp"
             app:layout_constraintStart_toEndOf="@+id/phoneRectangle"
             app:layout_constraintTop_toBottomOf="@+id/nameView" />
@@ -115,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="프로필 이미지"
+            android:text="@string/activity_user_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profilePicture" />
@@ -138,7 +138,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
-            android:hint="이름"
+            android:hint="@string/activity_user_name"
             android:textSize="10sp"
             app:layout_constraintStart_toEndOf="@+id/nameRectangle"
             app:layout_constraintTop_toBottomOf="@+id/profileImage" />
@@ -161,7 +161,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="28dp"
-            android:hint="분야"
+            android:hint="@string/activity_user_department"
             android:textSize="10sp"
             app:layout_constraintStart_toEndOf="@+id/departmentRectangle"
             app:layout_constraintTop_toBottomOf="@+id/phoneView" />
@@ -172,7 +172,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:background="@drawable/activity_myinformation_ellipse"
-            android:text="시작하기!"
+            android:text="@string/activity_user_start_btn"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
