--- a/app/src/main/res/menu/menu_push_ok.xml
+++ b/app/src/main/res/menu/menu_push_ok.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/appbarMemo"
-        android:title="메모"
+        android:title="@string/push_permission_ok"
         app:showAsAction="always"/>
 </menu>
