refact(#27) : 이미지 파일 확장자 통일, string.xml 수정

--- a/app/src/main/res/layout/activity_user_create.xml
+++ b/app/src/main/res/layout/activity_user_create.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="추가정보를 입력해주세요"
+        android:text="@string/group_user_create_title"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
