refact(#24): 도메인 및 프래그먼트 추가 및 수정

--- a/app/src/main/res/layout/activity_non_group_fragment_two.xml
+++ b/app/src/main/res/layout/activity_non_group_fragment_two.xml
@@ -4,10 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.wisestudy.nongroup.activity.NonGruopActivity"
+    >
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
