refact(#25) : UI 수정 , xml 파일명 변경

--- a/app/src/main/res/layout/activity_groupmember_location.xml
+++ b/app/src/main/res/layout/activity_groupmember_location.xml
@@ -26,33 +26,15 @@
             android:textStyle="bold"
             android:layout_gravity="center"/>
     </com.google.android.material.appbar.MaterialToolbar>
-
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/groupMemberLocationMapLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/calendar_round"
+    <fragment
+        android:id="@+id/groupMemberLocationMap"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="310dp"
+        android:layout_height="297dp"
         android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/groupMemberLocationToolbar">
-
-        <fragment
-            android:id="@+id/groupMemberLocationMap"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="310dp"
-            android:layout_height="297dp"
-            android:layout_marginTop="4dp"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.493"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@+id/groupMemberLocationToolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/groupMemberLocationRecyclerview"
@@ -63,7 +45,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/groupMemberLocationMapLayout"
+        app:layout_constraintTop_toBottomOf="@+id/groupMemberLocationMap"
         app:layout_constraintVertical_bias="0.0">
 
     </androidx.recyclerview.widget.RecyclerView>
